<resources>
    <string name="app_name">Healthcare Management</string>
    <string name="brain_text">Please select brain image from gallery\notherwise it will show wrong prediction.</string>
    <string name="select_image">Select Image</string>
    <string name="predict_text">Prediction</string>
    <string name="prediction_hint">Brain tumor prediction result will show here.</string>
    <string name="source1">https://www.ucsfhealth.org/</string>
    <string name="brain1">Treatment for brain tumors depends on a number of factors including the type, location and size of the tumor as well as the patient\'s age and general health. Treatment methods and schedules differ for children and adults.</string>
    <string name="brain2">Brain tumors are treated with surgery, radiation therapy and chemotherapy. Depending on your needs, several methods may be used. Before treatment begins, most patients are given steroids, drugs that relieve swelling or edema. Your may receive anticonvulsant medicine to prevent or control seizures.</string>
    <string name="surgery1">Surgery is the usual treatment for most brain tumors. To remove a brain tumor, a neurosurgeon makes an opening in the skull. This operation is called a craniotomy. Whenever possible, the surgeon attempts to remove the entire tumor. If the tumor cannot be completely removed without damaging vital brain tissue, your doctor may remove as much of the tumor as possible. Partial removal helps to relieve symptoms by reducing pressure on the brain and reduces the amount of tumor to be treated by radiation therapy or chemotherapy.</string>
    <string name="surgery2">Some tumors cannot be removed. In such cases, your doctor may do only a biopsy. A small piece of the tumor is removed so that a pathologist can examine it under a microscope to determine the type of cells it contains. This helps your doctor decide which treatment to use.</string>
    <string name="surgery3">Other advanced techniques during surgery include brain mapping to find functional pathways near tumors, endoscopy to perform biopsies and open spinal fluid pathways through a small scope and advanced frameless stereotaxic computer assisted tumor resections. Intraoperative MRI also is available to help maximize tumor removal.</string>
    <string name="brain_surgery_image_source">radiologykey.com</string>
    <string name="radiation1">Radiation therapy, also called radiotherapy, is the use of high-powered rays to damage cancer cells and stop them from growing. It is often used to destroy tumor tissue that cannot be removed with surgery or to kill cancer cells that may remain after surgery. Radiation therapy also is used when surgery is not possible.</string>
    <string name="radiation2">Radiation therapy may be given in two ways.</string>
    <string name="radiation3"><b>External radiation</b> comes from a large machine. Generally, external radiation treatments are given five days a week for several weeks. The treatment schedule depends on the type and size of the tumor and your age.</string>
    <string name="radiation4"><b>The Gamma Knife</b>, or stereotactic radiosurgery, is another way to treat brain tumors. The Gamma Knife isn\'t actually a knife, but a radiation therapy technique that delivers a single, finely focused, high dose of radiation precisely to its target. Treatment is given in just one session. High-energy rays are aimed at the tumor from many angles. In this way, a high dose of radiation reaches the tumor without damaging other brain tissue.</string>
    <string name="radiation_image_source">mayoclinic.org</string>
    <string name="chemotherapy1">Chemotherapy is the use of drugs to kill cancer cells. The doctor may use just one drug or a combination, usually giving the drugs orally or by injection into a blood vessel or muscle. Intrathecal chemotherapy involves injecting the drugs into the cerebrospinal fluid.</string>
    <string name="chemotherapy2">Chemotherapy is usually given in cycles. A treatment period is followed by a recovery period, then another treatment period and so on. Patients often don\'t need to stay in the hospital for treatment and most drugs can be given in the doctor\'s office or clinic. However, depending on the drugs used, the way they are given and the patient\'s general health, a short hospital stay may be necessary.</string>
    <string name="chemotherapy3">Advances in chemotherapy include direct placement into the tumor cavity using a new technique called convection enhanced delivery.</string>
    <string name="surgery">Surgery</string>
    <string name="radiation">Radiation therapy</string>
    <string name="chemotherapy">Chemotherapy</string>
    <string name="unknown">unknown</string>
    <string name="prevention1">The primary tool to prevent brain tumours is by controlling your lifestyle. This means eating healthy, exercising, avoiding known carcinogens in your environment, and reducing stress.</string>
    <string name="prevention2"><b>1. Sleep:</b> Sleep is a friend for brain health. An adequate amount of rest with eyes shut keeps your brain health.</string>
    <string name="prevention3"><b>2. Frankincense oil:</b> Along with yoga, meditation, and breathing exercises to reduce stress, inhaling frankincense oil can help alleviate inflammation in the brain.</string>
    <string name="prevention4"><b>3. Anti cancer diet:</b> Consuming a diet rich in cancer-fighting nutrients like antioxidants is critical in preventing brain tumors.</string>
    <string name="prevention5"><b>4. Ketogenic diet:</b> A ketogenic diet is a high protein diet. It reduces oxidative stress and inflammation in the brain which is associated with brain tumours. It also shuts down the nutrient supply to tumors.</string>
    <string name="prevention6"><b>5. Calorie restriction:</b> Dietary restriction, especially fasting has anti-carcinogenic properties just as the ketogenic diet.</string>
    <string name="prevention7"><b>6. Limit exposure to mobile phones:</b> Cell phones use increases risk for brain tumours. So restriction prevents these tumours. If you wish to discuss about any specific problem, you can consult a Neurologist.</string>
    <string name="link1"><u>Source: https://www.lybrate.com/</u></string>
    <string name="link2"><u>Source: https://www.ucsfhealth.org/</u></string>
    <string name="refresh"><u>Refresh</u></string>
    <string name="covid_hint">COVID-19 result will show here</string>
    <string name="buttonTakePhoto">Take Image</string>
    <string name="buttonSelectPhoto">Select Imae</string>
    <string name="descriptionImage">skin image</string>
    <string name="buttonDiagnose">Predict</string>
    <string name="defaultImage">Default Image set now..</string>
    <string name="brain_tumor_detection">Brain Tumor \nDetection</string>
    <string name="covid_text">Please select proper scan image from gallery otherwise it will show wrong prediction.</string>
    <string name="skin_text">Please select proper skin affected image from gallery otherwise it will show wrong prediction.</string>
    <string name="skin_hint">Skin Cancer result will show here..</string>
    <string name="actinic_keratosis">Sun safety is necessary to help prevent development and recurrence of actinic keratosis patches and spots.\nTake these steps to protect your skin from the sun: \n

        - <b>Limit your time in the sun.</b> Especially avoid time in the sun between 10 a.m. and 2 p.m. And avoid staying in the sun so long that you get a sunburn or a suntan.
        - <b>Use sunscreen.</b> Before spending time outdoors, even on cloud days, apply a broad-spectrum water-resistant sunscreen with a sun protection factor (SPF) of at least 30, as the American Academy of Dermatology recommends.\n\nUse sunscreen on all exposed skin, and use lip balm with sunscreen on your lips. Apply sunscreen at least 15 minutes before going outside and reapply it every two hours — or more often if you\'re swimming or perspiring.\n\nSunscreen is not recommended for babies under 6 months. Rather, keep them out of the sun if possible, or protect them with shade, hats, and clothing that covers the arms and legs.
        - <b>Cover up.</b> For extra protection from the sun, wear tightly woven clothing that covers your arms and legs. Also wear a broad-brimmed hat, which provides more protection than does a baseball cap or golf visor.
        - <b>Avoid tanning beds.</b> The UV exposure from a tanning bed can cause just as much skin damage as a tan acquired from the sun.
        - <b>Check your skin regularly and report changes to your doctor.</b> Examine your skin regularly, looking for the development of new skin growths or changes in existing moles, freckles, bumps and birthmarks. With the help of mirrors, check your face, neck, ears and scalp. Examine the tops and undersides of your arms and hands.</string>
    <string name="basal_cell">To reduce your risk of basal cell carcinoma you can:\n\n
        - <b>Avoid the sun during the middle of the day.</b> In many places, the sun\'s rays are strongest between about 10 a.m. and 4 p.m. Schedule outdoor activities for other times of the day, even during winter or when the sky is cloudy. \n\n<b>Wear sunscreen year-round.</b> Use a broad-spectrum sunscreen with an SPF of at least 30, even on cloudy days. Apply sunscreen generously, and reapply every two hours — or more often if you\'re swimming or perspiring. \n\n<b>Wear protective clothing.</b> Cover your skin with dark, tightly woven clothing that covers your arms and legs, and a broad-brimmed hat, which provides more protection than does a baseball cap or visor.  \nSome companies also sell protective clothing. A dermatologist can recommend an appropriate brand. Don\'t forget sunglasses. Look for those that block both types of UV radiation — UVA and UVB rays.  \n\n<b>Avoid tanning beds.</b> Tanning beds emit UV rays and can increase your risk of skin cancer. \n\n<b>Check your skin regularly and report changes to your doctor.</b> Examine your skin often for new skin growths or changes in existing moles, freckles, bumps and birthmarks. With the help of mirrors, check your face, neck, ears and scalp.  \nExamine your chest and trunk and the tops and undersides of your arms and hands. Examine both the front and the back of your legs and your feet, including the soles and the spaces between your toes. Also check your genital area and between your buttocks.</string>
    <string name="derma_text">A doctor may wish to rule out conditions that can look similar to dermatofibromas. Some of the possible diagnoses for growths that may, in rare cases, resembleTrusted Source dermatofibromas are:  \n -hypertrophic scarring or keloid \n -malignant melanoma \n -squamous cell carcinoma \n -basal cell carcinoma \n -Spitz nevus \n -blue nevus \n\nA rare skin cancer called dermatofibrosarcoma protuberans also initially resemblesTrusted Source a dermatofibroma.  \nDue to this, a qualified doctor should always make the diagnosis.</string>
    <string name="vascular_management">How is vascular lesion treated?</string>
    <string name="vas_management">There are different types of treatment for childhood vascular tumors.</string>
    <string name="vas_management1">Children with childhood vascular tumors should have their treatment planned by a team of health care providers who are experts in treating cancer in children.</string>
    <string name="vas_management2">Twelve types of standard treatment are used:\n - Beta-blocker therapy\n - Surgery\n - Photocoagulation\n - Cryotherapy\n - Embolization\n - Chemotherapy\n - Sclerotherapy\n -Radiation therapy\n - Targeted therapy\n - Immuno therapy\n - Other drug therapy</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="enter_a_valid_number">Enter a valid number</string>
    <string name="emergency_call_only"><u>Emergency call only</u></string>
</resources>