<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    tools:context=".Medi_Consult.SOSCall">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_call"
        android:fontFamily="@font/productsans_bold"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:id="@+id/sos_text"/>

    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_below="@id/sos_text"
        android:src="@drawable/emergency_call"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/viber"
        android:hint="@string/enter_a_valid_number"
        android:textColorHint="@color/black4"
        android:drawablePadding="16dp"
        android:textColor="@color/white"
        android:fontFamily="@font/productsans_regular"
        android:textSize="19sp"
        android:padding="16dp"
        android:background="@drawable/number_back"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:letterSpacing="0.03"
        android:inputType="phone"
        android:layout_below="@id/sos_img"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/call"
        android:padding="20dp"
        android:elevation="10dp"
        android:layout_below="@id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/call_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_call_only"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:textColor="@color/green2"
        android:letterSpacing="0.04"
        android:fontFamily="@font/productsans_regular"
        android:layout_marginBottom="30dp"
        android:textAlignment="center" />
</RelativeLayout>