<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:scrollbars="none"
    tools:context=".Skin.Vascular">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/vesculer"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background_gradient">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/white_circle"
                    android:src="@drawable/management"
                    android:padding="12dp"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textAlignment="textStart"
                    android:gravity="center"
                    android:background="@drawable/half_rounded2"
                    android:fontFamily="@font/productsans_bold"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="16dp"
                    android:letterSpacing="0.02"
                    android:text="@string/vascular_management"
                    android:textColor="@color/black2"
                    android:textSize="19sp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vas_management"
                android:textColor="@color/white"
                android:fontFamily="@font/productsans_regular"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:justificationMode="inter_word"
                tools:targetApi="o" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vas_management1"
                android:textColor="@color/white"
                android:fontFamily="@font/productsans_regular"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                tools:targetApi="o" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vas_management2"
                android:textColor="@color/white"
                android:fontFamily="@font/productsans_regular"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                tools:targetApi="o"
                android:paddingBottom="100dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>